feat: upgrade projects to target .NET 10.0 LTS and update related configurations

--- a/.editorconfig
+++ b/.editorconfig
@@ -142,10 +142,18 @@ dotnet_diagnostic.CA2215.severity = none
 dotnet_diagnostic.CA2229.severity = none
 dotnet_diagnostic.CA1710.severity = none
 dotnet_diagnostic.CA1050.severity = none
+dotnet_diagnostic.IDE0241.severity = suggestion
 dotnet_diagnostic.IDE0290.severity = suggestion
 dotnet_diagnostic.IDE0300.severity = suggestion
 dotnet_diagnostic.IDE0301.severity = suggestion
 dotnet_diagnostic.IDE0305.severity = suggestion
+dotnet_diagnostic.IDE0306.severity = suggestion
+dotnet_diagnostic.IDE0330.severity = suggestion
+dotnet_diagnostic.IDE0350.severity = suggestion
+dotnet_diagnostic.CA1514.severity = suggestion
+dotnet_diagnostic.CA1872.severity = suggestion
+dotnet_diagnostic.CA2022.severity = suggestion
+dotnet_diagnostic.CA2263.severity = suggestion
 dotnet_diagnostic.CA1854.severity = suggestion
 dotnet_diagnostic.CA1859.severity = suggestion
 dotnet_diagnostic.CA1860.severity = suggestion
