Update OpenAI package version to 2.7.0 and fix typo in project file

--- a/src/Microsoft.SqlTools.Connectors.VSCode/Microsoft.SqlTools.Connectors.VSCode.csproj
+++ b/src/Microsoft.SqlTools.Connectors.VSCode/Microsoft.SqlTools.Connectors.VSCode.csproj
@@ -30,7 +30,7 @@
 
   <ItemGroup Label="Package references">
     <PackageReference Include="Microsoft.SemanticKernel" />
-     <ackageReference Include="OpenAI" />
+    <PackageReference Include="OpenAI" />
     <PackageReference Include="System.ClientModel" />
   </ItemGroup>
 
